SDS: fix dot locations on mobile

--- a/sds/sds.scss
+++ b/sds/sds.scss
@@ -16,7 +16,8 @@
     display: inline-flex;
     margin: 0;
     margin-left: 0.5em;
-    padding-top: 3px;
+    position: relative;
+    bottom: 3px;
     box-sizing: border-box;
   }
 
